<resources>
    <string name="app_name">iCafe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="powered_by">Powered By : %s</string>

    <string name="server_ip">Server IP Address</string>
    <string name="server_username">Username</string>
    <string name="server_password">Password</string>
    <string name="connect">Connect</string>

    <string name="select_table_no">Select Table No.</string>
    <string name="select_theme_color">Select Theme Color</string>
    <string name="next">Next</string>

    <string name="restaurant_title">Restaurant Title</string>
    <string name="restaurant_sub_title">Enjoy food, Enjoy Life</string>

    <string name="welcome_msg">Welcome to iCafe</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="action_login">Login</string>
    <string name="search">Search</string>
    <string name="action_grid_view">Grid View</string>
    <string name="action_list_view">List View</string>
    <string name="action_filter">Filter</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="offers">Offers</string>

    <string name="none">None</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="beverage">Beverage</string>
    <string name="sweets">Sweets</string>
    <string name="all_categories">All Categories</string>

    <string name="cart">Cart</string>
    <string name="quantity">Quantity</string>
    <string name="menu_item">Menu Item</string>
    <string name="price">Price</string>
    <string name="done">Done</string>
    <string name="place_order">Place Order</string>
    <string name="total_price">Total Price: </string>
    <string name="enter_quantity">Enter Quantity</string>

    <string name="order_status">Order Status</string>
    <string name="order_id">Order ID</string>
    <string name="sub_order_id">Suborder ID : </string>

    <string name="customer_id">Customer ID</string>
    <string name="customer_name">Customer Name</string>

    <string name="generate_bill">Generate Bill</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="email">Email-ID</string>
    <string name="birth_date">Birth Date</string>
    <string name="anniversary_date">Anniversary Date</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="mobile_no_hint">+000-0000000000</string>
    <string name="enter_mobile_no">Enter your mobile no</string>
    <string name="hint_search">Searching for…</string>

    <string name="search_hint">Search</string>
</resources>
