<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/action_offers_tags"
            android:name="@string/offers"
            android:title="@string/offers"/>

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/nav_login_user"
            android:name="@string/action_login"
            android:title="@string/action_login"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:name="@string/settings"
            android:title="@string/settings"/>
    </group>
</menu>
