<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_view"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/config_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/black_opacity_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_screen_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/serverIPAddressTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/editbox_margin_leftright"
                android:layout_marginRight="@dimen/editbox_margin_leftright">

                <EditText
                    android:id="@+id/serverIPAddressEditbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:hint="@string/server_ip"
                    android:imeOptions="actionNext"
                    android:inputType="number|numberDecimal"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/serverUserNameEditbox" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/serverUsernameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/editbox_margin_leftright"
                android:layout_marginRight="@dimen/editbox_margin_leftright">

                <EditText
                    android:id="@+id/serverUserNameEditbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/server_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/serverPasswordEditbox" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/serverPasswordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/editbox_margin_leftright"
                android:layout_marginRight="@dimen/editbox_margin_leftright">

                <EditText
                    android:id="@+id/serverPasswordEditbox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/server_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/serverConnectionButton" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/serverConnectionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/editbox_margin_leftright"
                android:layout_marginRight="@dimen/editbox_margin_leftright"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corner_button_bg"
                android:imeActionLabel="Done"
                android:imeOptions="actionDone"
                android:text="@string/connect"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>